--- a/css/pandora-homepage.css
+++ b/css/pandora-homepage.css
@@ -669,7 +669,9 @@
     width: 84%;
     margin-bottom: 50%; }
   .pandora-homepage section.pandora-2 {
-    background: url("../features/pandora/palm-bg-dt.png"); }
+    background: url("../features/pandora/palm-bg-dt.png");
+    background-size: cover;
+    background-repeat: no-repeat; }
     .pandora-homepage section.pandora-2 .pandora-title .pandora-body-text-container {
       bottom: -17%; }
   .pandora-homepage section.pandora-3 .pandora-info, .pandora-homepage section.pandora-4 .pandora-info {
@@ -893,5 +895,43 @@
   to {
     transform: translate(0, 0);
     opacity: 1; } }
+.mobile-categories {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  display: none;
+  font-size: 16px;
+  width: 99%;
+  clear: both;
+  margin: 0 auto;
+  padding-top: 10px; }
+  .mobile-categories ul {
+    list-style: none;
+    margin: 0;
+    padding: 0; }
+    .mobile-categories ul li {
+      padding: 10px 0;
+      width: 48.5%;
+      float: left;
+      margin: 0.72vw;
+      background: #000;
+      color: #fff; }
+    .mobile-categories ul.black li {
+      background: #000;
+      color: #fff; }
+    .mobile-categories ul.purple li {
+      background: #605471;
+      color: #fff; }
+    .mobile-categories ul.purple-outline li {
+      background: #fff;
+      outline: 1px solid #605471;
+      color: #605471; }
+      .mobile-categories ul.purple-outline li:hover, .mobile-categories ul.purple-outline li:focus {
+        background: #605471;
+        color: #fff; }
+
+@media only screen and (max-width: 667px) {
+  .mobile-categories {
+    display: block; } }
 
 /*# sourceMappingURL=pandora-homepage.css.map */
