--- a/css/pandora-homepage.scss
+++ b/css/pandora-homepage.scss
@@ -761,6 +761,8 @@
       }
       &.pandora-2 {
         background: url('../features/pandora/palm-bg-dt.png');
+        background-size: cover;
+        background-repeat: no-repeat;
         .pandora-title {
           .pandora-body-text-container {
             bottom: -17%;
@@ -1054,4 +1056,53 @@
 @-o-keyframes slideDown {
   from { transform: translate(0, -100%); opacity: 0; }
   to   { transform: translate(0, 0); opacity: 1; }
+}
+
+.mobile-categories {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  display: none;
+  font-size: 16px;
+  width: 99%;
+  clear: both;
+  margin: 0 auto;
+  padding-top: 10px;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+      padding: 10px 0;
+      width: 48.5%;
+      float: left;
+      margin: 0.72vw;
+      background: #000;
+      color: #fff;
+    }
+    &.black li {
+      background: #000;
+      color: #fff;
+    }
+    &.purple li {
+      background: #605471;
+      color: #fff;
+    }
+    &.purple-outline li {
+      background: #fff;
+      outline: 1px solid #605471;
+      color: #605471;
+      &:hover,
+      &:focus {
+        background: #605471;
+        color: #fff;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:667px) {
+  .mobile-categories {
+    display: block;
+  }
 }
